--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,17 @@
 
 body{
     margin: 0 0 0 0;
-    background-image: url(../images/ep_naturalwhite.png)
+    background-image: url(../images/ep_naturalwhite.png);
+}
+
+.social-link{
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    border-left: none;
 }
 
 /* NAV BAR */
+
 nav{
     width:100%;
     height: 85px;
@@ -169,4 +176,28 @@ form{
 
 .form-text{
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
+}
+
+.message-form{
+    width: 500px;
+    height: 250px;
+}
+
+.footer{
+    height: 50px;
+    width: 100%;
+    background-color: #666;
+    margin-top: 15%;
+    border-top: solid 5px #4aaaa5;
+    display: block;
+    margin-bottom: 0;
+}
+
+.footer-text{
+    font-family: font-family: 'Georgia', Times, Times New Roman, serif;
+    margin-left: auto;
+    margin-left: auto;
+    text-align: center;
+    margin-bottom: 0;
+    
 }
